# clibs

./: CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.c
.github/workflows/: test.yml
examples/: examples.c  examples.h
libs/files/: lib_file_manager.c  lib_file_manager.h
libs/logs/: lib_logs_manager.c  lib_logs_manager.h
libs/strings/: lib_strings_manager.c  lib_strings_manager.h
libs/tests/: lib_tests_manager.c  lib_tests_manager.h
tests/: files.test.c  files.test.h  strings.test.c  strings.test.h
